# redirs

./: .rustfmt.toml  Cargo.toml
.sqlx/: query-e53d2a8d76f2dbf0c3a5cac18cf8b5f8a80744ce6eb4abfa9a1f4ea7b1c93d1d.json  query-f297c698712bce252bb1100bdb6dfe8572194d60658281cdbba42eafb133a9a2.json
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/migrations/: 20240820005533_initialize_admins.sql  20240820102423_initialize_urls.sql
server/src/: main.rs
