[package]
name = "redirs_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
k256 = { version = "0.13.3", features = [
    "arithmetic",
    "ecdsa",
    "serde",
    "jwk",
] }
serde_json = "1.0"
serde = "1.0"
dirs = "5.0.1"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
