[package]
name = "redirs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "chrono",
] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nano-id = { version = "0.4.0", features = ["base64"] }
url = "2.5.2"
rocket-governor = "0.2.0-rc.3"
k256 = { version = "0.13.3", features = ["ecdsa", "serde"] }
